# StackBlock

./: CMakeLists.txt  Stack_op_components.h  configure  dmrg.C  stackopxop.C  stackopxop.h  sweep_mps.C
genetic/: CMakeLists.txt
include/: multiarray.h
modules/four_index_ops/: four_index_compound_ops.C  four_index_wrappers.C
modules/npdm/: npdm.C
modules/three_index_ops/: three_index_compound_ops.C  three_index_ops.h  three_index_wrappers.C
modules/two_index_ops/: two_index_wrappers.C
newmat10/: CMakeLists.txt
