set(SRC_NEWMAT
    bandmat.cpp 
    cholesky.cpp 
    evalue.cpp 
    example.cpp
    fft.cpp
    garch.cpp
    hholder.cpp
    jacobi.cpp
    myexcept.cpp
    newfft.cpp
    newmat1.cpp
    newmat2.cpp
    newmat3.cpp
    newmat4.cpp
    newmat5.cpp
    newmat6.cpp
    newmat7.cpp
    newmat8.cpp
    newmat9.cpp
    newmatex.cpp
    newmatnl.cpp
    newmatrm.cpp
    nl_ex.cpp
    sl_ex.cpp
    solution.cpp
    sort.cpp
    submat.cpp
    svd.cpp
    test_exc.cpp
    tmt1.cpp
    tmt2.cpp
    tmt3.cpp
    tmt4.cpp
    tmt5.cpp
    tmt6.cpp
    tmt7.cpp
    tmt8.cpp
    tmt9.cpp
    tmta.cpp
    tmtb.cpp
    tmtc.cpp
    tmt.cpp
    tmtd.cpp
    tmte.cpp
    tmtf.cpp
    tmtg.cpp
    tmth.cpp
    tmti.cpp
    tmtj.cpp
    tmtk.cpp
    tmtl.cpp
    tmtm.cpp
)


add_library(libnewmat ${SRC_NEWMAT})
